--- a/examples/sr-7s_topo.yml
+++ b/examples/sr-7s_topo.yml
@@ -5,6 +5,7 @@ topology:
     R1:
       kind: vr-sros
       image: registry.srlinux.dev/pub/vr-sros:22.10.R1
+      startup-config: sr-7s-R1.partial.cfg
       type: >-
         cp: cpu=6 min_ram=6 chassis=sr-7s slot=A card=cpm-s ___
         lc: cpu=6 min_ram=6 max_nics=6 chassis=sr-7s slot=1 sfm=sfm-s card=xcm-7s xiom/x1=iom-s-1.5t mda/x1/1=ms24-10/100gb-sfpdd ___
@@ -13,6 +14,7 @@ topology:
       license: ~/license/license-sros22.txt
     R2:
       kind: vr-sros
+      startup-config: sr-7s-R2.partial.cfg
       image: registry.srlinux.dev/pub/vr-sros:22.10.R1
       type: >-
         cp: cpu=6 min_ram=6 chassis=sr-7s slot=A card=cpm-s ___
