fixed partial configs

--- a/examples/sr-7s-R1.partial.cfg
+++ b/examples/sr-7s-R1.partial.cfg
@@ -1,3 +1,4 @@
+configure {
     card 1 {
         admin-state enable
         card-type xcm-7s
@@ -248,3 +249,4 @@
         admin-state enable
         sfm-type sfm-s
     }
+}
